--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.3.0",
     "axios": "^1.3.4",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
